# mp3_sorter_tagger

./: pyproject.toml
src/: folders.json  folders.txt  renamer.ipynb
src/mp3_sorter_tagger/: helpers.py
tests/: test_helpers.py
