[tool.poetry]
name = "mp3-sorter-tagger"
version = "0.1.0"
description = ""
authors = ["Tomislav Nazifović <tomislav.nazifovic@gmail.com>"]
license = "GNU"
packages = [{include = "mp3_sorter_tagger", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.9"
music-tag = "^0.4.3"
ipython = "^8.26.0"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
ruff = "^0.5.4"
pytest-ruff = "^0.4.1"
mypy = "^1.11.0"
pytest-mypy = "^0.10.3"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
rich = "^13.7.1"


[tool.pytest.ini_options]
addopts = "-rfxX --mypy --ruff --verbose --cov-report html --cov-report term-missing --cov=src"
testpaths = ["tests", "src"]
markers = ["mypy"]


[tool.ruff]
exclude = [".git", ".gitlab", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".vscode"]
line-length = 100
target-version = "py311"
output-format = "full"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]


[tool.ruff.format]
docstring-code-format = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
